<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundedlayout2"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:layout_marginBottom="1dp"
        >

        <TextView
            android:id="@+id/tvMagneticStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1cd4c6"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/textSerialPort"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="#888888"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="right"/>

            <EditText
                android:id="@+id/etWriteSerialPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bSerialPortSendData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-sharif-thin"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#FFFFFFFF"
            android:background="@drawable/selectorbuttonpressed"
            android:text="@string/sendData"

            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receivedData"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="left"/>

        <ScrollView
            android:id="@+id/svReceivedData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/tvSerialPortReceivedData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000000"/>

        </ScrollView>


    </LinearLayout>

</LinearLayout>